3rd section added

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <!-- ------------------------------------------------------------------------------------ -->
     <!--///////////////////////////// main section start ///////////////////////////////////-->
     <main class="container mx-auto">
+        <!-- our feature secion -->
         <section class="our-feature text-center my-24">
             <h1 class="text-5xl font-extrabold mb-5 ">
                 Our Featured Products
@@ -73,37 +74,67 @@
                 There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
             </p>
             <!-- card container -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-12 ">
-                <div class="card w-64 bg-base-200 shadow-xl py-7">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mt-12 ">
+                <div class="card  bg-base-200 shadow-xl py-7 px-7">
                     <figure><img src="./images/tea-1.png" alt="teas" /></figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Milk Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                      <p class="font-semibold">Creamer could be replaced by fresh milk</p>
                     </div>
                   </div>
-                <div class="card w-64 bg-base-200 shadow-xl py-7">
+                <div class="card  bg-base-200 shadow-xl py-7 px-7">
                     <figure><img src="./images/tea-2.png" alt="teas" /></figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Black Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                      <p class="font-semibold">Creamer could be replaced by fresh milk</p>
                     </div>
                   </div>
-                <div class="card w-64 bg-base-200 shadow-xl py-7">
+                <div class="card  bg-base-200 shadow-xl py-7 px-7">
                     <figure><img src="./images/tea-3.png" alt="teas" /></figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Lemon Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                      <p class="font-semibold">Creamer could be replaced by fresh milk</p>
                     </div>
                   </div>
-                <div class="card w-64 bg-base-200 shadow-xl py-7">
+                <div class="card  bg-base-200 shadow-xl py-7 px-7">
                     <figure><img src="./images/tea-4.png" alt="teas" /></figure>
                     <div class="card-body text-center">
                       <h2 class="text-2xl font-bold">Green Tea</h2>
-                      <p>Creamer could be replaced by fresh milk</p>
+                      <p class="font-semibold">Creamer could be replaced by fresh milk</p>
                     </div>
                   </div>
 
             </div>
+        </section>
+
+        <!-- best sell section -->
+        <section class="best-sell container my-24">
+            <div class="hero min-h-screen">
+                <div class="hero-content flex-col lg:flex-row gap-12">
+                    <div class="grid grid-rows-3 grid-flow-col gap-5">
+                        <div class="bg-gradient-to-r from-orange-300 to-orange-100 rounded-md p-5"></div>
+                        <div class="row-span-2 bg-[#5776391A] rounded-md p-5"><img src="./images/fresh-2.png" alt=""></div>
+                        <div class="row-span-2 bg-[#E6A6231A] rounded-md p-5"><img src="./images/fresh-1.png" alt=""></div>
+                        <div class="bg-gradient-to-r from-neutral-300 to-neutral-100 rounded-md p-5"></div>
+                    </div>
+                  <div>
+                    <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly <br> Presented</h1>
+                    <p class="py-6 lg:max-w-xl mb-7">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <h4 class="font-bold">
+                        Unique Taste
+                    </h4>
+                    <p class="lg:max-w-md mb-5">
+                        A Unique and different style from other teapots gives a luxurious and minimalist impression.
+                    </p>
+                    <h4 class="font-bold">
+                        Premium Quality
+                    </h4>
+                    <p class="lg:max-w-md">
+                        Premium Quality that makes tea more elegant and more durable when you use it.
+                    </p>
+                  </div>
+                </div>
+              </div>
         </section>
     </main>
     <!--///////////////////////////// main section end ///////////////////////////////////-->
