--- a/index.html
+++ b/index.html
@@ -148,20 +148,25 @@
         </section>
 
         <!-- customer reviews -->
-        <section class="customer-reviews flex flex-col lg:flex-row gap-44 items-center bg-gradient-to-r from-[#FF8938] to-[#F00] py-28 px-16  ">
+        <section
+            class="customer-reviews flex flex-col lg:flex-row gap-44 items-center bg-gradient-to-r from-[#FF8938] to-[#F00] py-28 px-16  ">
             <div class="reviews-content">
-                <h1 class="text-5xl font-extrabold text-white mb-5">Meet Our Super <br> 
+                <h1 class="text-5xl font-extrabold text-white mb-5">Meet Our Super <br>
                     Clients</h1>
                 <p class="text-white mb-7">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable.
                 </p>
                 <div class="btn bg-white text-orange-600 font-bold ">Show All</div>
             </div>
             <div class="reviews-containt relative">
                 <!-- upcoming -->
-                <div class=" opacity-25 z-10 bg-white rounded-lg drop-shadow-lg p-10 w-[443px] relative  mb-14">
-                    <img class="absolute border-4 border-white rounded-full -top-7  -left-7" src="./images/client.png" alt="">
-                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <div class=" opacity-25 z-10 bg-white rounded-lg drop-shadow-lg p-10 w-[400px] relative  mb-14">
+                    <img class="absolute border-4 border-white rounded-full -top-7  -left-7" src="./images/client.png"
+                        alt="">
+                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who
+                        are interested to treatment</p>
                     <h4 class="font-bold">Ilham Yuda</h4>
                     <p>Businessman</p>
                     <div class="flex justify-end">
@@ -169,9 +174,11 @@
                     </div>
                 </div>
                 <!-- present -->
-                <div class=" top-40 lg:-left-20 z-30 bg-white rounded-lg drop-shadow-lg p-10 w-[443px] absolute">
-                    <img class="absolute border-4 border-white rounded-full -top-7  -left-7" src="./images/client.png" alt="">
-                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <div class=" top-40  lg:-left-20 z-30 bg-white rounded-lg drop-shadow-lg p-10 w-[400px] absolute">
+                    <img class="absolute border-4 border-white rounded-full -top-7  -left-7" src="./images/client.png"
+                        alt="">
+                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who
+                        are interested to treatment</p>
                     <h4 class="font-bold">Ilham Yuda</h4>
                     <p>Businessman</p>
                     <div class="flex justify-end">
@@ -179,13 +186,68 @@
                     </div>
                 </div>
                 <!-- past -->
-                <div class=" opacity-25 z-10 bg-white rounded-lg drop-shadow-lg p-10 w-[443px] relative">
-                    <img class="absolute border-4 border-white rounded-full -top-7  -left-7" src="./images/client.png" alt="">
-                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                <div class=" opacity-25 z-10 bg-white rounded-lg drop-shadow-lg p-10 w-[400px] relative">
+                    <img class="absolute border-4 border-white rounded-full -top-7  -left-7" src="./images/client.png"
+                        alt="">
+                    <p class="mb-5">We are providing the best and suitable home insurance services for the people who
+                        are interested to treatment</p>
                     <h4 class="font-bold">Ilham Yuda</h4>
                     <p>Businessman</p>
                     <div class="flex justify-end">
                         <img src="./images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- News section -->
+        <section class="news-section my-24">
+            <h1 class="text-5xl font-extrabold mb-5 text-center">
+                News & Events
+            </h1>
+            <p class="text-gray-400 lg:max-w-4xl mx-auto text-center">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour, or randomised words which don't look even slightly
+                believable.
+            </p>
+            <div class="news-cart-container flex flex-col lg:flex-row justify-center gap-6 mx-5">
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/news-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-start text-start">
+                        <p class="text-base font-medium text-gray-400">Feb 05, 2027</p>
+                        <h2 class="card-title text-xl font-extrabold">
+                            Collecting 8 points for <br>
+                            discount</h2>
+                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="font-bold">Learn More</p>
+                    </div>
+                </div>
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/news-2.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-start text-start">
+                        <p class="text-base font-medium text-gray-400">Feb 05, 2027</p>
+                        <h2 class="card-title text-xl font-extrabold">
+                            Collecting 8 points for <br>
+                            discount</h2>
+                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="font-bold">Learn More</p>
+                    </div>
+                </div>
+                <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure class="px-10 pt-10">
+                        <img src="./images/news-3.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-start text-start">
+                        <p class="text-base font-medium text-gray-400">Feb 05, 2027</p>
+                        <h2 class="card-title text-xl font-extrabold">
+                            Collecting 8 points for <br>
+                            discount</h2>
+                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="font-bold">Learn More</p>
                     </div>
                 </div>
             </div>
