footer section completed

--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
                         <h2 class="card-title text-xl font-extrabold">
                             Collecting 8 points for <br>
                             discount</h2>
-                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of
+                            Lorem Ipsum available.</p>
                         <p class="font-bold">Learn More</p>
                     </div>
                 </div>
@@ -233,7 +234,8 @@
                         <h2 class="card-title text-xl font-extrabold">
                             Collecting 8 points for <br>
                             discount</h2>
-                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of
+                            Lorem Ipsum available.</p>
                         <p class="font-bold">Learn More</p>
                     </div>
                 </div>
@@ -246,7 +248,8 @@
                         <h2 class="card-title text-xl font-extrabold">
                             Collecting 8 points for <br>
                             discount</h2>
-                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of Lorem Ipsum available.</p>
+                        <p class="text-base font-medium text-gray-400 mb-3">There are many variations of passages of
+                            Lorem Ipsum available.</p>
                         <p class="font-bold">Learn More</p>
                     </div>
                 </div>
@@ -256,8 +259,61 @@
     <!--///////////////////////////// main section end ///////////////////////////////////-->
     <!-- ------------------------------------------------------------------------------------- -->
     <!--///////////////////////////// footer section start ///////////////////////////////////-->
-    <footer>
-
+    <footer class="  bg-red-100 p-20 lg:p-36">
+        <div class="footer items-center  bg-red-100 text-neutral-content justify-between mb-24">
+            <div>
+                <img src="./images/cup.png" alt="">
+            </div>
+            <div class="flex flex-row  items-center  lg:justify-end gap-4">
+                <p class="text-black font-bold">Ready to get strated ?</p>
+                <button class="btn btn-primary bg-gradient-to-r from-orange-500 to-red-500 border-0 text-white">Get
+                    Started
+                </button>
+            </div>
+        </div>
+        <div class="footer text-base-content justify-between ">
+            <nav>
+                <header class="text-black text-xl font-semibold ">Quick Links</header> 
+                <a class="link link-hover">Home</a> 
+                <a class="link link-hover">About US</a> 
+                <a class="link link-hover">Insurance</a> 
+                <a class="link link-hover">Privacy policy</a>
+              </nav> 
+              <nav>
+                <header class="text-black text-xl font-semibold">Our Service</header> 
+                <a class="link link-hover">Life Insurance</a> 
+                <a class="link link-hover">Car Insurance</a> 
+                <a class="link link-hover">Health Insurance</a> 
+                <a class="link link-hover">House Insurance</a>
+              </nav> 
+              <nav>
+                <header class="text-black text-xl font-semibold">Help</header> 
+                <a class="link link-hover">FaQs</a> 
+                <a class="link link-hover">Contact Us</a> 
+              </nav> 
+              <form>
+                <header class="text-black text-xl font-semibold">Subscribe to our newsletter</header> 
+                <fieldset class="form-control">
+                  <label class="label">
+                    <span class="label-text">Email address</span>
+                  </label> 
+                  <div class="justify-center flex flex-row">
+                    <input type="text" placeholder="username@site.com" class=" border-b-2 bg-transparent border-black outline-none w-52" /> 
+                    <button class="btn bg-gradient-to-r from-orange-500 to-red-500 rounded-full"><i class="fa-solid fa-chevron-right"></i></button>
+                  </div>
+                  <div class="media flex justify-evenly mt-12">
+                    <div><i class=" text-2xl fa-brands fa-facebook-f"></i></div>
+                    <div><i class=" text-2xl fa-brands fa-twitter"></i></div>
+                    <div><i class=" text-2xl fa-brands fa-instagram"></i></div>
+                  </div>
+                </fieldset>
+              </form>
+        </div>
+        <div class="footer footer-center mt-16">
+            <aside>
+              <p>© 2027 UIDesign.to - All rights reserved.</p>
+            </aside>
+        </div>
     </footer>
     <!--///////////////////////////// footer section end ///////////////////////////////////-->
 
